--- a/DiChoHo/templates/static/css/stylelogin.css
+++ b/DiChoHo/templates/static/css/stylelogin.css
@@ -254,3 +254,14 @@ body {
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
+.login h3 {
+  visibility: visible;
+  color: red;
+  margin-top: 40px;
+  margin-bottom: 0px;
+}
+
+.login.slide-up h3 {
+  visibility: hidden;
+}
