--- a/DiChoHo/templates/login.html
+++ b/DiChoHo/templates/login.html
@@ -28,7 +28,7 @@
                   alt="sing up image"
                 />
               </figure>
-              <a href="#" class="signup-image-link">Create an account</a>
+              <a href= "{% url 'register'%}" class="signup-image-link">Create an account</a>
             </div>
 
             <div class="signin-form">
@@ -102,7 +102,7 @@
       </section>
     </div>
     <script src="{% static 'vendor/jquery/logandsignjquery.min.js' %}"></script>
-    <script src="{% static 'js/logandsign.js' %}"></script>
+    <!-- <script src="{% static 'js/logandsign.js' %}"></script> -->
   </body>
   <!-- This templates was made by Colorlib (https://colorlib.com) -->
 </html>
