--- a/DiChoHo/templates/base.html
+++ b/DiChoHo/templates/base.html
@@ -62,7 +62,11 @@
 					<li class="nav-item {% block menu_contact_class %}{% endblock %}"><a href="{% url 'contact' %}" class="nav-link">Liên hệ</a></li>
 					<li class="nav-item cta cta-colored"><a href="{% url 'cart' %}" class="nav-link"><span
 								class="icon-shopping_cart"></span>[0]</a></li>
-					<li class="nav-item {% block menu_login_class %}{% endblock %}"><a href="{% url 'login' %}" class="nav-link">Đăng nhập</a></li>
+					{%if user.is_authenticated %}
+					<li class="nav-item"><a href="{% url 'logout' %}" class="nav-link">Đăng Xuất</a></li>
+					{%else %}
+					<li class="nav-item"><a href="{% url 'login' %}" class="nav-link">Đăng Nhập</a></li>
+					{%endif %}
 				</ul>
 			</div>
 		</div>
