--- a/DiChoHo/templates/login.html
+++ b/DiChoHo/templates/login.html
@@ -1,11 +1,12 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Sign Up Form by Colorlib</title>
+    <title>DICHOHO | Đăng nhập</title>
 
     <!-- Font Icon -->
     <link
@@ -28,7 +29,7 @@
                   alt="sing up image"
                 />
               </figure>
-              <a href="#" class="signup-image-link">Create an account</a>
+              <a href="{% url 'register'%}" class="signup-image-link">Create an account</a>
             </div>
 
             <div class="signin-form">
