--- a/DiChoHo/templates/register.html
+++ b/DiChoHo/templates/register.html
@@ -1,107 +1,64 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Sign Up Form by Colorlib</title>
 
-    <!-- Font Icon -->
-    <link
-      rel="stylesheet"
-      href="{% static 'fonts/material-icon/css/material-design-iconic-font.min.css' %}"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>DICHOHO | Đăng nhập</title>
 
-    <!-- Main css -->
-    <link rel="stylesheet" href="{% static 'css/stylelogandsign.css' %}" />
-  </head>
-  <body>
-    <div class="main">
-      <!-- Sign up form -->
-      <section class="signup">
-        <div class="container">
-          <div class="signup-content">
-            <div class="signup-form">
-              <h2 class="form-title">Sign up</h2>
-              <form method="POST" class="register-form" id="register-form">
-                {% csrf_token%}
-                <div class="form-group">
-                  <label for="name"
-                    ><i class="zmdi zmdi-account material-icons-name"></i
-                  ></label>
-                  <input
-                    type="text"
-                    name="name"
-                    id="name"
-                    placeholder="Your Name"
-                  />
-                </div>
-                <div class="form-group">
-                  <label for="email"><i class="zmdi zmdi-email"></i></label>
-                  <input
-                    type="email"
-                    name="email"
-                    id="email"
-                    placeholder="Your Email"
-                  />
-                </div>
-                <div class="form-group">
-                  <label for="pass"><i class="zmdi zmdi-lock"></i></label>
-                  <input
-                    type="password"
-                    name="pass"
-                    id="pass"
-                    placeholder="Password"
-                  />
-                </div>
-                <div class="form-group">
-                  <label for="re-pass"
-                    ><i class="zmdi zmdi-lock-outline"></i
-                  ></label>
-                  <input
-                    type="password"
-                    name="re_pass"
-                    id="re_pass"
-                    placeholder="Repeat your password"
-                  />
-                </div>
-                <div class="form-group">
-                  <input
-                    type="checkbox"
-                    name="agree-term"
-                    id="agree-term"
-                    class="agree-term"
-                  />
-                  <label for="agree-term" class="label-agree-term"
-                    ><span><span></span></span>I agree all statements in
-                    <a href="#" class="term-service">Terms of service</a></label
-                  >
-                </div>
-                <div class="form-group form-button">
-                  <input
-                    type="submit"
-                    name="signup"
-                    id="signup"
-                    class="form-submit"
-                    value="Register"
-                  />
-                </div>
-              </form>
-            </div>
-            <div class="signup-image">
-              <figure>
-                <img src="{% static 'images/signup-image.jpg' %}" alt="sing up image" />
-              </figure>
-              <a href="#" class="signup-image-link">I am already member</a>
-            </div>
+  <!-- Font Icon -->
+  <link rel="stylesheet" href="{% static 'fonts/material-icon/css/material-design-iconic-font.min.css' %}" />
+
+  <!-- Main css -->
+  <link rel="stylesheet" href="{% static 'css/stylelogandsign.css' %}" />
+</head>
+
+<body>
+  <div class="main">
+    <!-- Sign up form -->
+    <section class="signup">
+      <div class="container">
+        <div class="signup-content">
+          <div class="signup-form">
+            <h2 class="form-title">Đăng Kí</h2>
+            <form action="" method="POST" class="register-form" id="register-form">
+              {% csrf_token%}
+              <div class="form-group">
+                <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
+                <input type="text" class="input" placeholder="Họ và tên" name="name" />
+                <input type="text" class="input" placeholder="Username" name="username" />
+                <input type="number" class="input" placeholder="Số điện thoại" name="phone" />
+                <input type="text" class="input" placeholder="Địa chỉ" name="address" />
+                <input type="email" class="input" placeholder="Email" name="email" />
+                <input type="password" class="input" placeholder="Mật khẩu" name="password" />
+                <input type="password" class="input" placeholder="Nhập lại mật khẩu" name="password2" />
+              </div>
+              <div class="form-group">
+                <input type="checkbox" name="agree-term" id="agree-term" class="agree-term" />
+                <label for="agree-term" class="label-agree-term"><span><span></span></span>I agree all statements in
+                  <a href="#" class="term-service">Terms of service</a></label>
+              </div>
+              <div class="form-group form-button">
+                <input type="submit" name="signup" id="signup" class="form-submit" value="Register" />
+              </div>
+            </form>
+          </div>
+          <div class="signup-image">
+            <figure>
+              <img src="{% static 'images/signup-image.jpg' %}" alt="sing up image" />
+            </figure>
+            <a href="{% url 'login'%}" class="signup-image-link">I am already member</a>
           </div>
         </div>
-      </section>
-      <!-- JS -->
-      <script src="{% static 'vendor/jquery/logandsignjquery.min.js' %}"></script>
-      <script src="{% static 'js/logandsign.js' %}"></script>
-    </div>
-  </body>
-  <!-- This templates was made by Colorlib (https://colorlib.com) -->
+      </div>
+    </section>
+    <!-- JS -->
+    <script src="{% static 'vendor/jquery/logandsignjquery.min.js' %}"></script>
+    <script src="{% static 'js/logandsign.js' %}"></script>
+  </div>
+</body>
+<!-- This templates was made by Colorlib (https://colorlib.com) -->
+
 </html>
