--- a/DiChoHo/templates/register.html
+++ b/DiChoHo/templates/register.html
@@ -1,119 +1,204 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Đăng ký</title>
-    <link rel="stylesheet" href="{% static './css/register_style.css' %}" />
-  </head>
+
+<head>
+  <meta charset="UTF-8" />
+  <title>DICHOHO | Đăng Ký</title>
+  <link rel="stylesheet" href="{% static './css/register_style.css' %}" />
+</head>
+
+<body>
+  <!-- partial:index.partial.html -->
+
   <body>
-    <!-- partial:index.partial.html -->
-    <body>
-      <div class="session">
-        <div class="left">
-          <?xml version="1.0" encoding="UTF-8"?>
-          <svg
-            enable-background="new 0 0 300 302.5"
-            version="1.1"
-            viewBox="0 0 300 302.5"
-            xml:space="preserve"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <style type="text/css">
-              .st01 {
-                fill: #fff;
-              }
-            </style>
-            <path
-              class="st01"
-              d="m126 302.2c-2.3 0.7-5.7 0.2-7.7-1.2l-105-71.6c-2-1.3-3.7-4.4-3.9-6.7l-9.4-126.7c-0.2-2.4 1.1-5.6 2.8-7.2l93.2-86.4c1.7-1.6 5.1-2.6 7.4-2.3l125.6 18.9c2.3 0.4 5.2 2.3 6.4 4.4l63.5 110.1c1.2 2 1.4 5.5 0.6 7.7l-46.4 118.3c-0.9 2.2-3.4 4.6-5.7 5.3l-121.4 37.4zm63.4-102.7c2.3-0.7 4.8-3.1 5.7-5.3l19.9-50.8c0.9-2.2 0.6-5.7-0.6-7.7l-27.3-47.3c-1.2-2-4.1-4-6.4-4.4l-53.9-8c-2.3-0.4-5.7 0.7-7.4 2.3l-40 37.1c-1.7 1.6-3 4.9-2.8 7.2l4.1 54.4c0.2 2.4 1.9 5.4 3.9 6.7l45.1 30.8c2 1.3 5.4 1.9 7.7 1.2l52-16.2z"
-            />
-          </svg>
-        </div>
-        <form
-          action="{% url 'login' %}"
-          class="log-in"
-          autocomplete="off"
-          method="POST"
-        >
-          {% csrf_token %}
-          <h4>We are <span>NUVA</span></h4>
-          <p>Welcome back! Log in to your account to view today's clients:</p>
-          <div class="floating-label">
-            <input
-              placeholder="Nhập tài khoản"
-              type="text"
-              name="username"
-              id="username"
-              autocomplete="off"
-            />
-            <label for="username">Tài khoản</label>
-            <div class="icon">
-              <?xml version="1.0" encoding="UTF-8"?>
-              <svg
-                enable-background="new 0 0 100 100"
-                version="1.1"
-                viewBox="0 0 100 100"
-                xml:space="preserve"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <style type="text/css">
-                  .st0 {
-                    fill: none;
-                  }
-                </style>
-                <g transform="translate(0 -952.36)">
-                  <path
-                    d="m17.5 977c-1.3 0-2.4 1.1-2.4 2.4v45.9c0 1.3 1.1 2.4 2.4 2.4h64.9c1.3 0 2.4-1.1 2.4-2.4v-45.9c0-1.3-1.1-2.4-2.4-2.4h-64.9zm2.4 4.8h60.2v1.2l-30.1 22-30.1-22v-1.2zm0 7l28.7 21c0.8 0.6 2 0.6 2.8 0l28.7-21v34.1h-60.2v-34.1z"
-                  />
-                </g>
-                <rect class="st0" width="100" height="100" />
-              </svg>
-            </div>
-          </div>
-          <div class="floating-label">
-            <input
-              placeholder="Nhập mật khẩu"
-              type="password"
-              name="password"
-              id="password"
-              autocomplete="off"
-            />
-            <label for="password">Mật khẩu</label>
-            <div class="icon">
-              <?xml version="1.0" encoding="UTF-8"?>
-              <svg
-                enable-background="new 0 0 24 24"
-                version="1.1"
-                viewBox="0 0 24 24"
-                xml:space="preserve"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <style type="text/css">
-                  .st0 {
-                    fill: none;
-                  }
-                  .st1 {
-                    fill: #010101;
-                  }
-                </style>
-                <rect class="st0" width="24" height="24" />
-                <path class="st1" d="M19,21H5V9h14V21z M6,20h12V10H6V20z" />
-                <path
-                  class="st1"
-                  d="M16.5,10h-1V7c0-1.9-1.6-3.5-3.5-3.5S8.5,5.1,8.5,7v3h-1V7c0-2.5,2-4.5,4.5-4.5s4.5,2,4.5,4.5V10z"
-                />
-                <path
-                  class="st1"
-                  d="m12 16.5c-0.8 0-1.5-0.7-1.5-1.5s0.7-1.5 1.5-1.5 1.5 0.7 1.5 1.5-0.7 1.5-1.5 1.5zm0-2c-0.3 0-0.5 0.2-0.5 0.5s0.2 0.5 0.5 0.5 0.5-0.2 0.5-0.5-0.2-0.5-0.5-0.5z"
-                />
-              </svg>
-            </div>
-          </div>
-          <button type="submit">Đăng ký</button>
-        </form>
+    <div class="session">
+      <div class="left">
+        <?xml version="1.0" encoding="UTF-8"?>
+        <svg version="1.1" id="Icons" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+          viewBox="0 0 32 32" style="enable-background:new 0 0 32 32;" xml:space="preserve">
+        <style type="text/css">
+          .st0{fill:none;stroke:#ffffff;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;}
+        </style>
+        <g>
+          <path class="st0" d="M16,18.1C13.7,14.4,9.6,12,5,12c-0.5,0-0.9,0-1.4,0.1C3.2,13.3,3,14.6,3,16c0,6.7,5.1,12.2,11.6,12.9"/>
+          <path class="st0" d="M16,18.1C13.7,14.4,9.6,12,5,12c-0.5,0-0.9,0-1.4,0.1"/>
+          <path class="st0" d="M16,18.1c1.3,2,2,4.4,2,6.9c0,1.4-0.2,2.7-0.6,3.9C23.9,28.2,29,22.7,29,16c0-1.4-0.2-2.7-0.6-3.9
+            C27.9,12,27.5,12,27,12c-3.5,0-6.6,1.4-9,3.6"/>
+        </g>
+        <path class="st0" d="M6.4,12.1C7.7,8,11.5,5,16,5c3.4,0,6.4,1.7,8.2,4.2"/>
+        <path class="st0" d="M18.1,5.2C16.3,5.8,15,7.5,15,9.5c0,0.7,0.2,1.4,0.5,2c-0.6-0.3-1.3-0.5-2-0.5c-1.5,0-2.9,0.8-3.7,1.9"/>
+        </svg>
       </div>
-    </body>
-    <!-- partial -->
+      <form action="" class="log-in" autocomplete="off" method="POST">
+        {% csrf_token %}
+        <h4>Chúng tôi là <span>DICHOHO</span></h4>
+        <p>Hãy ấn đăng kí ngay để tận hưởng mua sắm tại nhà mùa dịch bệnh:</p>
+        <div class="floating-label">
+          <input placeholder="Nhập tài khoản" type="text" name="username" id="username" autocomplete="off" required/>
+          <label for="username">Tài khoản</label>
+          <div class="icon">
+            <?xml version="1.0" encoding="UTF-8"?>
+            <svg enable-background="new 0 0 100 100" version="1.1" viewBox="0 0 60 60" xml:space="preserve"
+              xmlns="http://www.w3.org/2000/svg">
+              <style type="text/css">
+                .st0 {
+                  fill: none;
+                }
+              </style>
+              <g transform="translate(5,10)">
+                <path d="M19.38,19.265C13.464,20.481,9,25.729,9,32v17h32V32c0-6.271-4.464-11.519-10.38-12.735C33.261,17.464,35,14.431,35,11
+                c0-5.514-4.486-10-10-10S15,5.486,15,11C15,14.431,16.739,17.464,19.38,19.265z M28,21c6.065,0,11,4.935,11,11v15H11V32
+                c0-6.065,4.935-11,11-11H28z M25,3c4.411,0,8,3.589,8,8s-3.589,8-8,8s-8-3.589-8-8S20.589,3,25,3z" />
+              </g>
+              <rect class="st0" width="100" height="100" />
+            </svg>
+          </div>
+        </div>
+
+        <div class="floating-label">
+          <input placeholder="Nhập Email" type="text" name="email" id="email" />
+          <label for="username">Email</label>
+          <div class="icon">
+            <?xml version="1.0" encoding="UTF-8"?>
+            <svg enable-background="new 0 0 100 100" version="1.1" viewBox="0 0 100 100" xml:space="preserve"
+              xmlns="http://www.w3.org/2000/svg">
+              <style type="text/css">
+                .st0 {
+                  fill: none;
+                }
+              </style>
+              <g transform="translate(0 -952.36)">
+                <path
+                  d="m17.5 977c-1.3 0-2.4 1.1-2.4 2.4v45.9c0 1.3 1.1 2.4 2.4 2.4h64.9c1.3 0 2.4-1.1 2.4-2.4v-45.9c0-1.3-1.1-2.4-2.4-2.4h-64.9zm2.4 4.8h60.2v1.2l-30.1 22-30.1-22v-1.2zm0 7l28.7 21c0.8 0.6 2 0.6 2.8 0l28.7-21v34.1h-60.2v-34.1z" />
+              </g>
+              <rect class="st0" width="100" height="100" />
+            </svg>
+          </div>
+        </div>
+
+        <div class="floating-label">
+          <input placeholder="Nhập Mật Khẩu" type="password" name="password" id="password" autocomplete="off" required/>
+          <label for="password">Mật Khẩu</label>
+          <div class="icon">
+            <?xml version="1.0" encoding="UTF-8"?>
+            <svg enable-background="new 0 0 24 24" version="1.1" viewBox="0 0 24 24" xml:space="preserve"
+              xmlns="http://www.w3.org/2000/svg">
+              <style type="text/css">
+                .st0 {
+                  fill: none;
+                }
+
+                .st1 {
+                  fill: #010101;
+                }
+              </style>
+              <rect class="st0" width="24" height="24" />
+              <path class="st1" d="M19,21H5V9h14V21z M6,20h12V10H6V20z" />
+              <path class="st1"
+                d="M16.5,10h-1V7c0-1.9-1.6-3.5-3.5-3.5S8.5,5.1,8.5,7v3h-1V7c0-2.5,2-4.5,4.5-4.5s4.5,2,4.5,4.5V10z" />
+              <path class="st1"
+                d="m12 16.5c-0.8 0-1.5-0.7-1.5-1.5s0.7-1.5 1.5-1.5 1.5 0.7 1.5 1.5-0.7 1.5-1.5 1.5zm0-2c-0.3 0-0.5 0.2-0.5 0.5s0.2 0.5 0.5 0.5 0.5-0.2 0.5-0.5-0.2-0.5-0.5-0.5z" />
+            </svg>
+          </div>
+        </div>
+
+        <div class="floating-label">
+          <input placeholder="Nhập Lại Mật Khẩu" type="password" name="password2" id="password2" autocomplete="off" required/>
+          <label for="password">Mật Khẩu Lần 2</label>
+          <div class="icon">
+            <?xml version="1.0" encoding="UTF-8"?>
+            <svg enable-background="new 0 0 24 24" version="1.1" viewBox="0 0 24 24" xml:space="preserve"
+              xmlns="http://www.w3.org/2000/svg">
+              <style type="text/css">
+                .st0 {
+                  fill: none;
+                }
+
+                .st1 {
+                  fill: #010101;
+                }
+              </style>
+              <rect class="st0" width="24" height="24" />
+              <path class="st1" d="M19,21H5V9h14V21z M6,20h12V10H6V20z" />
+              <path class="st1"
+                d="M16.5,10h-1V7c0-1.9-1.6-3.5-3.5-3.5S8.5,5.1,8.5,7v3h-1V7c0-2.5,2-4.5,4.5-4.5s4.5,2,4.5,4.5V10z" />
+              <path class="st1"
+                d="m12 16.5c-0.8 0-1.5-0.7-1.5-1.5s0.7-1.5 1.5-1.5 1.5 0.7 1.5 1.5-0.7 1.5-1.5 1.5zm0-2c-0.3 0-0.5 0.2-0.5 0.5s0.2 0.5 0.5 0.5 0.5-0.2 0.5-0.5-0.2-0.5-0.5-0.5z" />
+            </svg>
+          </div>
+        </div>
+
+
+        <div class="floating-label">
+          <input placeholder="Nhập Họ Tên" type="text" name="name" id="name" required/>
+          <label for="username">Họ và Tên</label>
+          <div class="icon">
+            <?xml version="1.0" encoding="UTF-8"?>
+            <svg enable-background="new 0 0 100 100" version="1.1" viewBox="0 0 60 60" xml:space="preserve"
+              xmlns="http://www.w3.org/2000/svg">
+              <style type="text/css">
+                .st0 {
+                  fill: none;
+                }
+              </style>
+              <g transform="translate(5,10)">
+                <path d="M19.38,19.265C13.464,20.481,9,25.729,9,32v17h32V32c0-6.271-4.464-11.519-10.38-12.735C33.261,17.464,35,14.431,35,11
+                c0-5.514-4.486-10-10-10S15,5.486,15,11C15,14.431,16.739,17.464,19.38,19.265z M28,21c6.065,0,11,4.935,11,11v15H11V32
+                c0-6.065,4.935-11,11-11H28z M25,3c4.411,0,8,3.589,8,8s-3.589,8-8,8s-8-3.589-8-8S20.589,3,25,3z" />
+              </g>
+              <rect class="st0" width="100" height="100" />
+            </svg>
+          </div>
+        </div>
+
+        <div class="floating-label">
+          <input placeholder="Nhập Địa Chỉ" type="text" name="address" id="address" required/>
+          <label for="username">Địa Chỉ</label>
+          <div class="icon">
+            <?xml version="1.0" encoding="UTF-8"?>
+            <svg enable-background="new 0 0 100 100" version="1.1" viewBox="0 0 180 180" xml:space="preserve"
+              xmlns="http://www.w3.org/2000/svg">
+              <style type="text/css">
+                .st0 {
+                  fill: none;
+                }
+              </style>
+              <g transform="translate(20,30)">
+                <path
+                d="M125.46114,7.71969a3.4249,3.4249,0,0,0-3.09468-.44686l-38.45,13.24353-38.47-15.46a3.41578,3.41578,0,0,0-2.38548-.06L3.41035,18.65555a3.41392,3.41392,0,0,0-2.30322,3.22807v95.61486a3.41259,3.41259,0,0,0,4.52641,3.22807L44.08135,107.483l38.47,15.46a3.40865,3.40865,0,0,0,1.27389.24677,3.4492,3.4492,0,0,0,1.14716-.19786l33.09882-11.80068,6.33608-1.78967a3.4163,3.4163,0,0,0,2.48552-3.28587V10.5009A3.42115,3.42115,0,0,0,125.46114,7.71969ZM47.81408,13.36826,80.7306,26.5965v88.25485L47.81408,101.62269ZM7.93676,24.318,40.98445,12.93488v88.39144L7.93676,112.70973Zm112.12647,79.2144-3.9595,1.11826c-.07337.02-.14451.04446-.21787.06892L87.56023,114.819V26.48465l32.503-11.195Z"/>/>
+              </g>
+              <rect class="st0" width="100" height="100" />
+            </svg>
+          </div>
+        </div>
+
+        <div class="floating-label">
+          <input placeholder="Nhập Số Điện Thoại" type="text" name="phone" id="phone" required/>
+          <label for="username">Số Điện Thoại</label>
+          <div class="icon">
+            <?xml version="1.0" encoding="UTF-8"?>
+            <svg enable-background="new 0 0 100 100" version="1.1" viewBox="0 0 70 70" xml:space="preserve"
+              xmlns="http://www.w3.org/2000/svg">
+              <style type="text/css">
+                .st0 {
+                  fill: none;
+                }
+              </style>
+              <g transform="translate(10, 10)">
+                <path
+                d="M46.557,37.182l-9-6.014c-1.498-1.002-2.941-0.967-4.189,0.059c-3.504,2.873-5.582,2.049-5.92,1.879 c-1.982-0.992-3.854-1.928-6.741-4.813c-3.584-3.586-4.878-5.875-5.812-7.74c-0.373-0.746-0.803-3.254,1.65-5.869 c1.147-1.221,1.253-2.721,0.299-4.221c-0.735-1.156-0.735-1.156-1.313-2.006c-0.57-0.84-1.709-2.518-4.713-7.014 C10.169,0.473,9.247,0,8,0C6.586,0,5.87,0.717,5.293,1.293l-3,3C0.169,6.416,0,7.633,0,9c0,1.721,2.485,12.939,14.292,24.705 C26.061,45.514,37.268,48,38.988,48h0.066c1.355-0.02,2.559-0.199,4.652-2.293l3-3C47.283,42.131,48,41.414,48,40 C48,38.752,47.527,37.83,46.557,37.182z M45.293,41.293l-3,3c-1.684,1.684-2.416,1.695-3.305,1.707 c-0.123-0.004-10.891-1.273-23.282-13.709C3.415,20.043,2.002,9.096,2,9c0-0.887,0-1.586,1.706-3.293l3-3C7.233,2.182,7.443,2,8,2 c0.653,0,0.927,0.213,1.156,0.555c3.009,4.504,4.15,6.186,4.721,7.025c0.563,0.828,0.563,0.828,1.28,1.957 c0.568,0.893,0.302,1.383-0.07,1.779c-3.121,3.324-2.66,6.771-1.981,8.131c1.003,2.006,2.39,4.463,6.187,8.26 c3.115,3.115,5.223,4.168,7.26,5.188c0.561,0.279,1.293,0.434,2.063,0.434c1.326,0,3.445-0.443,6.02-2.555 c0.365-0.301,0.625-0.336,0.789-0.336c0.287,0,0.631,0.133,1.021,0.395l9,6.012C45.787,39.072,46,39.346,46,40 C46,40.557,45.818,40.768,45.293,41.293z" />
+              </g>
+              <rect class="st0" width="100" height="100" />
+            </svg>
+          </div>
+        </div>
+
+        <button type="submit">Đăng Ký</button>
+      </form>
+    </div>
   </body>
+  <!-- partial -->
+</body>
+
 </html>
