--- a/DiChoHo/templates/static/css/register_style.css
+++ b/DiChoHo/templates/static/css/register_style.css
@@ -267,7 +267,7 @@ input:focus {
   height: auto;
   min-height: 100%;
   position: relative;
-  background-image: url("https://images.pexels.com/photos/114979/pexels-photo-114979.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+  background-image: url("../images/meat.jpg");
   background-size: cover;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
