--- a/DiChoHo/templates/login.html
+++ b/DiChoHo/templates/login.html
@@ -85,6 +85,7 @@
             name="username"
             id="username"
             autocomplete="off"
+            required
           />
           <label for="username">Tài khoản</label>
           <div class="icon">
@@ -117,6 +118,7 @@
             name="password"
             id="password"
             autocomplete="off"
+            required
           />
           <label for="password">Mật khẩu</label>
           <div class="icon">
