--- a/DiChoHo/templates/register.html
+++ b/DiChoHo/templates/register.html
@@ -57,7 +57,7 @@
         </div>
 
         <div class="floating-label">
-          <input placeholder="Nhập Email" type="text" name="email" id="email" />
+          <input placeholder="Nhập email" type="text" name="email" id="email" />
           <label for="username">Email</label>
           <div class="icon">
             <?xml version="1.0" encoding="UTF-8"?>
@@ -78,8 +78,8 @@
         </div>
 
         <div class="floating-label">
-          <input placeholder="Nhập Mật Khẩu" type="password" name="password" id="password" autocomplete="off" required/>
-          <label for="password">Mật Khẩu</label>
+          <input placeholder="Nhập mật khẩu" type="password" name="password" id="password" autocomplete="off" required/>
+          <label for="password">Mật khẩu</label>
           <div class="icon">
             <?xml version="1.0" encoding="UTF-8"?>
             <svg enable-background="new 0 0 24 24" version="1.1" viewBox="0 0 24 24" xml:space="preserve"
@@ -104,8 +104,8 @@
         </div>
 
         <div class="floating-label">
-          <input placeholder="Nhập Lại Mật Khẩu" type="password" name="password2" id="password2" autocomplete="off" required/>
-          <label for="password">Mật Khẩu Lần 2</label>
+          <input placeholder="Nhập lại mật khẩu" type="password" name="password2" id="password2" autocomplete="off" required/>
+          <label for="password">Nhập lại mật khẩu</label>
           <div class="icon">
             <?xml version="1.0" encoding="UTF-8"?>
             <svg enable-background="new 0 0 24 24" version="1.1" viewBox="0 0 24 24" xml:space="preserve"
@@ -131,7 +131,7 @@
 
 
         <div class="floating-label">
-          <input placeholder="Nhập Họ Tên" type="text" name="name" id="name" required/>
+          <input placeholder="Nhập họ tên" type="text" name="name" id="name" required/>
           <label for="username">Họ và Tên</label>
           <div class="icon">
             <?xml version="1.0" encoding="UTF-8"?>
@@ -153,8 +153,8 @@
         </div>
 
         <div class="floating-label">
-          <input placeholder="Nhập Địa Chỉ" type="text" name="address" id="address" required/>
-          <label for="username">Địa Chỉ</label>
+          <input placeholder="Nhập địa chỉ" type="text" name="address" id="address" required/>
+          <label for="username">Địa chỉ</label>
           <div class="icon">
             <?xml version="1.0" encoding="UTF-8"?>
             <svg enable-background="new 0 0 100 100" version="1.1" viewBox="0 0 180 180" xml:space="preserve"
@@ -174,8 +174,8 @@
         </div>
 
         <div class="floating-label">
-          <input placeholder="Nhập Số Điện Thoại" type="text" name="phone" id="phone" required/>
-          <label for="username">Số Điện Thoại</label>
+          <input placeholder="Nhập số điện thoại" type="text" name="phone" id="phone" required/>
+          <label for="username">Số điện thoại</label>
           <div class="icon">
             <?xml version="1.0" encoding="UTF-8"?>
             <svg enable-background="new 0 0 100 100" version="1.1" viewBox="0 0 70 70" xml:space="preserve"
