--- a/DiChoHo/templates/base.html
+++ b/DiChoHo/templates/base.html
@@ -82,13 +82,8 @@
 	<!-- footer -->
 	<footer class="ftco-footer ftco-section">
 		<div class="container">
-			<div class="row">
-				<div class="mouse">
-					<a href="#" class="mouse-icon">
-						<div class="mouse-wheel"><span class="ion-ios-arrow-up"></span></div>
-					</a>
-				</div>
-			</div>
+			{% block arrow %}
+			{% endblock %}
 			<div class="row mb-5">
 				<div class="col-md">
 					<div class="ftco-footer-widget mb-4">
