--- a/DiChoHo/templates/login.html
+++ b/DiChoHo/templates/login.html
@@ -1,27 +1,17 @@
+{% extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Đăng nhập</title>
-    <link rel="stylesheet" href="{% static './css/login_style.css' %}" />
-  </head>
-  <body>
-    <!-- partial:index.partial.html -->
+{% block title %}Profile{% endblock %}
+
+{% block menu_home_class %}active{% endblock %}
+{% block page_css %}<link rel="stylesheet" href="{% static './css/login_style.css' %}" />{% endblock %} <!-- load thêm 1 file css riêng của base cùng với các css khác-->
+{% block content %} 
+
+  <section class="body-login"> <!-- Thêm section để tạo 1 class body để có thể dùng css lên -->
     <div class="session">
       <div class="left">
         <?xml version="1.0" encoding="UTF-8"?>
-        <svg
-          version="1.1"
-          id="Icons"
-          xmlns="http://www.w3.org/2000/svg"
-          xmlns:xlink="http://www.w3.org/1999/xlink"
-          x="0px"
-          y="0px"
-          viewBox="0 0 32 32"
-          style="enable-background: new 0 0 32 32"
-          xml:space="preserve"
-        >
+        <svg version="1.1" id="Icons" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+          x="0px" y="0px" viewBox="0 0 32 32" style="enable-background: new 0 0 32 32" xml:space="preserve">
           <style type="text/css">
             .st0 {
               fill: none;
@@ -33,70 +23,33 @@
             }
           </style>
           <g>
-            <path
-              class="st0"
-              d="M16,18.1C13.7,14.4,9.6,12,5,12c-0.5,0-0.9,0-1.4,0.1C3.2,13.3,3,14.6,3,16c0,6.7,5.1,12.2,11.6,12.9"
-            />
-            <path
-              class="st0"
-              d="M16,18.1C13.7,14.4,9.6,12,5,12c-0.5,0-0.9,0-1.4,0.1"
-            />
-            <path
-              class="st0"
-              d="M16,18.1c1.3,2,2,4.4,2,6.9c0,1.4-0.2,2.7-0.6,3.9C23.9,28.2,29,22.7,29,16c0-1.4-0.2-2.7-0.6-3.9
-            C27.9,12,27.5,12,27,12c-3.5,0-6.6,1.4-9,3.6"
-            />
+            <path class="st0"
+              d="M16,18.1C13.7,14.4,9.6,12,5,12c-0.5,0-0.9,0-1.4,0.1C3.2,13.3,3,14.6,3,16c0,6.7,5.1,12.2,11.6,12.9" />
+            <path class="st0" d="M16,18.1C13.7,14.4,9.6,12,5,12c-0.5,0-0.9,0-1.4,0.1" />
+            <path class="st0" d="M16,18.1c1.3,2,2,4.4,2,6.9c0,1.4-0.2,2.7-0.6,3.9C23.9,28.2,29,22.7,29,16c0-1.4-0.2-2.7-0.6-3.9
+            C27.9,12,27.5,12,27,12c-3.5,0-6.6,1.4-9,3.6" />
           </g>
-          <path
-            class="st0"
-            d="M6.4,12.1C7.7,8,11.5,5,16,5c3.4,0,6.4,1.7,8.2,4.2"
-          />
-          <path
-            class="st0"
-            d="M18.1,5.2C16.3,5.8,15,7.5,15,9.5c0,0.7,0.2,1.4,0.5,2c-0.6-0.3-1.3-0.5-2-0.5c-1.5,0-2.9,0.8-3.7,1.9"
-          />
+          <path class="st0" d="M6.4,12.1C7.7,8,11.5,5,16,5c3.4,0,6.4,1.7,8.2,4.2" />
+          <path class="st0"
+            d="M18.1,5.2C16.3,5.8,15,7.5,15,9.5c0,0.7,0.2,1.4,0.5,2c-0.6-0.3-1.3-0.5-2-0.5c-1.5,0-2.9,0.8-3.7,1.9" />
         </svg>
       </div>
-      <form
-        action="{% url 'login' %}"
-        class="log-in"
-        autocomplete="off"
-        method="POST"
-      >
+      <form action="{% url 'login' %}" class="log-in" autocomplete="off" method="POST">
         {% csrf_token %}
-        <div
-          class="logo-class"
-          style="background-color: #02be6e; border-radius: 10px"
-        >
-          <img
-            src="{% static './images/Logo.png' %}"
-            alt="logo"
-            style="width: 25px; height: 25px"
-          />
+        <div class="logo-class" style="background-color: #02be6e; border-radius: 10px">
+          <img src="{% static './images/Logo.png' %}" alt="logo" style="width: 25px; height: 25px" />
           <h2 style="font-weight: bold">DICHOHO</h2>
         </div>
         {% for message in messages %}
         <div class="msg">{{message}}</div>
         {% endfor %}
         <div class="floating-label">
-          <input
-            placeholder="Nhập tài khoản"
-            type="text"
-            name="username"
-            id="username"
-            autocomplete="off"
-            required
-          />
+          <input placeholder="Nhập tài khoản" type="text" name="username" id="username" autocomplete="off" required />
           <label for="username">Tài khoản</label>
           <div class="icon">
             <?xml version="1.0" encoding="UTF-8"?>
-            <svg
-              enable-background="new 0 0 100 100"
-              version="1.1"
-              viewBox="0 0 100 100"
-              xml:space="preserve"
-              xmlns="http://www.w3.org/2000/svg"
-            >
+            <svg enable-background="new 0 0 100 100" version="1.1" viewBox="0 0 100 100" xml:space="preserve"
+              xmlns="http://www.w3.org/2000/svg">
               <style type="text/css">
                 .st0 {
                   fill: none;
@@ -104,50 +57,35 @@
               </style>
               <g transform="translate(0 -952.36)">
                 <path
-                  d="m17.5 977c-1.3 0-2.4 1.1-2.4 2.4v45.9c0 1.3 1.1 2.4 2.4 2.4h64.9c1.3 0 2.4-1.1 2.4-2.4v-45.9c0-1.3-1.1-2.4-2.4-2.4h-64.9zm2.4 4.8h60.2v1.2l-30.1 22-30.1-22v-1.2zm0 7l28.7 21c0.8 0.6 2 0.6 2.8 0l28.7-21v34.1h-60.2v-34.1z"
-                />
+                  d="m17.5 977c-1.3 0-2.4 1.1-2.4 2.4v45.9c0 1.3 1.1 2.4 2.4 2.4h64.9c1.3 0 2.4-1.1 2.4-2.4v-45.9c0-1.3-1.1-2.4-2.4-2.4h-64.9zm2.4 4.8h60.2v1.2l-30.1 22-30.1-22v-1.2zm0 7l28.7 21c0.8 0.6 2 0.6 2.8 0l28.7-21v34.1h-60.2v-34.1z" />
               </g>
               <rect class="st0" width="100" height="100" />
             </svg>
           </div>
         </div>
         <div class="floating-label">
-          <input
-            placeholder="Nhập mật khẩu"
-            type="password"
-            name="password"
-            id="password"
-            autocomplete="off"
-            required
-          />
+          <input placeholder="Nhập mật khẩu" type="password" name="password" id="password" autocomplete="off"
+            required />
           <label for="password">Mật khẩu</label>
           <div class="icon">
             <?xml version="1.0" encoding="UTF-8"?>
-            <svg
-              enable-background="new 0 0 24 24"
-              version="1.1"
-              viewBox="0 0 24 24"
-              xml:space="preserve"
-              xmlns="http://www.w3.org/2000/svg"
-            >
+            <svg enable-background="new 0 0 24 24" version="1.1" viewBox="0 0 24 24" xml:space="preserve"
+              xmlns="http://www.w3.org/2000/svg">
               <style type="text/css">
                 .st0 {
                   fill: none;
                 }
+
                 .st1 {
                   fill: #010101;
                 }
               </style>
               <rect class="st0" width="24" height="24" />
               <path class="st1" d="M19,21H5V9h14V21z M6,20h12V10H6V20z" />
-              <path
-                class="st1"
-                d="M16.5,10h-1V7c0-1.9-1.6-3.5-3.5-3.5S8.5,5.1,8.5,7v3h-1V7c0-2.5,2-4.5,4.5-4.5s4.5,2,4.5,4.5V10z"
-              />
-              <path
-                class="st1"
-                d="m12 16.5c-0.8 0-1.5-0.7-1.5-1.5s0.7-1.5 1.5-1.5 1.5 0.7 1.5 1.5-0.7 1.5-1.5 1.5zm0-2c-0.3 0-0.5 0.2-0.5 0.5s0.2 0.5 0.5 0.5 0.5-0.2 0.5-0.5-0.2-0.5-0.5-0.5z"
-              />
+              <path class="st1"
+                d="M16.5,10h-1V7c0-1.9-1.6-3.5-3.5-3.5S8.5,5.1,8.5,7v3h-1V7c0-2.5,2-4.5,4.5-4.5s4.5,2,4.5,4.5V10z" />
+              <path class="st1"
+                d="m12 16.5c-0.8 0-1.5-0.7-1.5-1.5s0.7-1.5 1.5-1.5 1.5 0.7 1.5 1.5-0.7 1.5-1.5 1.5zm0-2c-0.3 0-0.5 0.2-0.5 0.5s0.2 0.5 0.5 0.5 0.5-0.2 0.5-0.5-0.2-0.5-0.5-0.5z" />
             </svg>
           </div>
         </div>
@@ -155,6 +93,6 @@
         <a class="sign-up" href="{% url 'register' %}">Đăng ký</a>
       </form>
     </div>
-    <!-- partial -->
-  </body>
-</html>
+  </section>
+  <!-- partial -->
+{% endblock %}
