--- a/DiChoHo/templates/static/css/register_style.css
+++ b/DiChoHo/templates/static/css/register_style.css
@@ -5,6 +5,18 @@
   margin: 0;
 }
 
+h2{
+  font-size: 20px;
+  padding-top: 5px;
+}
+
+.logo-class {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 25px;
+  margin-left: 150px;
+}
+
 html,
 .body-register {
   height: 100vh;
@@ -36,8 +48,9 @@ form {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  justify-content: center;
   padding-bottom: 20px;
-  width: 300px;
+  width: 450px;
 }
 form h4 {
   margin-bottom: 20px;
@@ -80,7 +93,7 @@ button {
   text-align: center;
   padding: 15px 40px;
   margin-top: 5px;
-  background-color: #b08bf8;
+  background-color: #02be6e;
   color: #fff;
   font-size: 14px;
   margin-left: auto;
@@ -254,8 +267,8 @@ input:focus {
 .session {
   display: flex;
   flex-direction: row;
-  width: auto;
-  height: auto;
+  width: 700px;
+  height: 750px;
   margin: auto auto;
   background: #ffffff;
   border-radius: 4px;
@@ -267,7 +280,8 @@ input:focus {
   height: auto;
   min-height: 100%;
   position: relative;
-  background-image: url("../images/meat.jpg");
+  background-image: url("../images/signin_img.jpg");
+  background-position: 30%;
   background-size: cover;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
@@ -276,4 +290,18 @@ input:focus {
   height: 40px;
   width: auto;
   margin: 20px;
+}
+
+.msg {
+  color: red;
+  background-color: #f0cec9;
+  border: red;
+  height: 40px;
+  width: 420px;
+  line-height: 40px;
+  text-align: center;
+  font-weight: bold;
+  margin-top: 5px;
+  margin-bottom: 30px;
+  border-radius: 15px;
 }
