Translate some page from English to Vietnamese

--- a/DiChoHo/templates/cart.html
+++ b/DiChoHo/templates/cart.html
@@ -11,8 +11,7 @@
 	<div class="container">
 		<div class="row no-gutters slider-text align-items-center justify-content-center">
 			<div class="col-md-9 ftco-animate text-center">
-				<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span>Cart</span></p>
-				<h1 class="mb-0 bread">My Cart</h1>
+				<h1 class="mb-0 bread">Giỏ hàng</h1>
 			</div>
 		</div>
 	</div>
@@ -28,10 +27,10 @@
 							<tr class="text-center">
 								<th>&nbsp;</th>
 								<th>&nbsp;</th>
-								<th>Product name</th>
-								<th>Price</th>
-								<th>Quantity</th>
-								<th>Total</th>
+								<th>Sản phẩm</th>
+								<th>Giá</th>
+								<th>Số lượng</th>
+								<th>Tổng cộng</th>
 							</tr>
 						</thead>
 						<tbody>
@@ -148,25 +147,6 @@
 		</div>
 	</div>
 </section>
-
-<!-- <section class="ftco-section ftco-no-pt ftco-no-pb py-5 bg-light">
-      <div class="container py-4">
-        <div class="row d-flex justify-content-center py-5">
-          <div class="col-md-6">
-			<h2 style="font-size: 22px;" class="mb-0">Đăng kí nhận tin</h2>
-			<span>Đăng kí nhận tin tức sớm nhất về những sản phẩm mới nhất của chúng qua email</span>
-          </div>
-          <div class="col-md-6 d-flex align-items-center">
-            <form action="#" class="subscribe-form">
-              <div class="form-group d-flex">
-                <input type="text" class="form-control" placeholder="Nhập email của bạn">
-                <input type="submit" value="Subscribe" class="submit px-3">
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </section> -->
 
 <script>
 	$(document).ready(function () {
