--- a/DiChoHo/templates/wishlist.html
+++ b/DiChoHo/templates/wishlist.html
@@ -10,9 +10,8 @@
 <div class="hero-wrap hero-bread" style="background-image: url('/static/images/bg_1.jpg');">
 	<div class="container">
 		<div class="row no-gutters slider-text align-items-center justify-content-center">
-			<div class="col-md-9 ftco-animate text-center">
-				<p class="breadcrumbs"><span class="mr-2"><a href="{% url 'home' %}">Home</a></span> <span>Wishlist</span></p>
-				<h1 class="mb-0 bread">My Wishlist</h1>
+			<div class="col-md-9 ftco-animate text-center">				
+				<h1 class="mb-0 bread">Danh sách sản phẩm yêu thích</h1>
 			</div>
 		</div>
 	</div>
@@ -27,11 +26,11 @@
 						<thead class="thead-primary">
 							<tr class="text-center">
 								<th>&nbsp;</th>
-								<th>Product List</th>
+								<th>Sản phẩm</th>
 								<th>&nbsp;</th>
-								<th>Price</th>
-								<th>Quantity</th>
-								<th>Total</th>
+								<th>Giá</th>
+								<th>Số lượng</th>
+								<th>Tổng cộng</th>
 							</tr>
 						</thead>
 						<tbody>
