--- a/DiChoHo/templates/about.html
+++ b/DiChoHo/templates/about.html
@@ -36,74 +36,12 @@
         <div class="pb-md-5">
           <p>Chúng tôi hỗ trợ bạn các dịch vụ về mua hàng trực tuyến với chất lượng và giá trị tốt nhất trên Website của
             chúng tôi</p>
-          <p><a href="#" class="btn btn-primary">Shop now</a></p>
+          <p><a href="#" class="btn btn-primary" style="background-color: #02be6e;">Shop now</a></p>
         </div>
       </div>
     </div>
   </div>
 </section>
-
-<!-- <section class="ftco-section ftco-no-pt ftco-no-pb py-5 bg-light">
-      <div class="container py-4">
-        <div class="row d-flex justify-content-center py-5">
-          <div class="col-md-6">
-          	<h2 style="font-size: 22px;" class="mb-0">Đăng ký để nhận các thông tin mới về mặt hàng </h2>
-          	<span>Nhận thông tin cập nhật qua email về các cửa hàng mới nhất của chúng tôi và các ưu đãi đặc biệt</span>
-          </div>
-          <div class="col-md-6 d-flex align-items-center">
-            <form action="#" class="subscribe-form">
-              <div class="form-group d-flex">
-                <input type="text" class="form-control" placeholder="Nhập địa chỉ email của bạn">
-                <input type="submit" value="Đăng ký" class="submit px-3">
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </section> -->
-
-<!-- <section class="ftco-section ftco-counter img" id="section-counter" style="background-image: url(images/bg_3.jpg);">
-    	<div class="container">
-    		<div class="row justify-content-center py-5">
-    			<div class="col-md-10">
-		    		<div class="row">
-		          <div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
-		            <div class="block-18 text-center">
-		              <div class="text">
-		                <strong class="number" data-number="10000">0</strong>
-		                <span>Happy Customers</span>
-		              </div>
-		            </div>
-		          </div>
-		          <div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
-		            <div class="block-18 text-center">
-		              <div class="text">
-		                <strong class="number" data-number="100">0</strong>
-		                <span>Branches</span>
-		              </div>
-		            </div>
-		          </div>
-		          <div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
-		            <div class="block-18 text-center">
-		              <div class="text">
-		                <strong class="number" data-number="1000">0</strong>
-		                <span>Partner</span>
-		              </div>
-		            </div>
-		          </div>
-		          <div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
-		            <div class="block-18 text-center">
-		              <div class="text">
-		                <strong class="number" data-number="100">0</strong>
-		                <span>Awards</span>
-		              </div>
-		            </div>
-		          </div>
-		        </div>
-	        </div>
-        </div>
-    	</div>
-    </section> -->
 
 <section class="ftco-section testimony-section">
   <div class="container">
@@ -111,8 +49,6 @@
       <div class="col-md-7 heading-section ftco-animate text-center">
         <span class="subheading">Testimony</span>
         <h2 class="mb-4">Những vị khách của chúng tôi đã nhận xét</h2>
-        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind
-          texts. Separated they live in</p>
       </div>
     </div>
     <div class="row ftco-animate">
@@ -126,8 +62,7 @@
                 </span>
               </div>
               <div class="text text-center">
-                <p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and
-                  Consonantia, there live the blind texts.</p>
+                <p class="mb-5 pl-4 line">Sản phẩm chất lượng rất tốt, giao hàng lại đúng hạn, tôi rất hài lòng</p>
                 <p class="name">Garreth Smith</p>
                 <span class="position">Marketing Manager</span>
               </div>
@@ -141,8 +76,7 @@
                 </span>
               </div>
               <div class="text text-center">
-                <p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and
-                  Consonantia, there live the blind texts.</p>
+                <p class="mb-5 pl-4 line">Cửa hàng luôn có những chương trình giảm giá, đồng thời lại miễn phí giao hàng. Cho cửa hàng 5 sao luôn.</p>
                 <p class="name">Garreth Smith</p>
                 <span class="position">Interface Designer</span>
               </div>
@@ -156,8 +90,7 @@
                 </span>
               </div>
               <div class="text text-center">
-                <p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and
-                  Consonantia, there live the blind texts.</p>
+                <p class="mb-5 pl-4 line">Trong thời buổi dịch bệnh như thế này, việc kiếm được một nguồn nông sản tốt không phải là chuyện dễ dàng, tuy nhiên DICHOHO đã không làm tôi thất vọng.</p>
                 <p class="name">Garreth Smith</p>
                 <span class="position">UI Designer</span>
               </div>
@@ -171,8 +104,7 @@
                 </span>
               </div>
               <div class="text text-center">
-                <p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and
-                  Consonantia, there live the blind texts.</p>
+                <p class="mb-5 pl-4 line">Không nói nhiều, cho cửa hàng 5 sao.</p>
                 <p class="name">Garreth Smith</p>
                 <span class="position">Web Developer</span>
               </div>
@@ -186,8 +118,7 @@
                 </span>
               </div>
               <div class="text text-center">
-                <p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and
-                  Consonantia, there live the blind texts.</p>
+                <p class="mb-5 pl-4 line">Giao hàng luôn luôn đúng hạn, nhân viên thì nhiệt tình. Cửa hàng này rất tốt.</p>
                 <p class="name">Garreth Smith</p>
                 <span class="position">System Analyst</span>
               </div>
@@ -208,8 +139,8 @@
             <span class="flaticon-shipped"></span>
           </div>
           <div class="media-body">
-            <h3 class="heading">Free Shipping</h3>
-            <span>On order over $100</span>
+            <h3 class="heading">MIỄN PHÍ GIAO HÀNG</h3>
+            <span>CHO NỘI THÀNH TPHCM</span>
           </div>
         </div>
       </div>
@@ -219,8 +150,8 @@
             <span class="flaticon-diet"></span>
           </div>
           <div class="media-body">
-            <h3 class="heading">Always Fresh</h3>
-            <span>Product well package</span>
+            <h3 class="heading">LUÔN LUÔN TƯƠI</h3>
+            <span>SẢN PHẨM ĐƯỢC ĐÓNG GÓI TỐT</span>
           </div>
         </div>
       </div>
@@ -230,8 +161,8 @@
             <span class="flaticon-award"></span>
           </div>
           <div class="media-body">
-            <h3 class="heading">Superior Quality</h3>
-            <span>Quality Products</span>
+            <h3 class="heading">CHẤT LƯỢNG TUYỆT VỜI</h3>
+            <span>SẢN PHẨM CHẤT LƯỢNG CAO</span>
           </div>
         </div>
       </div>
@@ -241,8 +172,8 @@
             <span class="flaticon-customer-service"></span>
           </div>
           <div class="media-body">
-            <h3 class="heading">Support</h3>
-            <span>24/7 Support</span>
+            <h3 class="heading">HỖ TRỢ</h3>
+            <span>HỖ TRỢ 24/7</span>
           </div>
         </div>
       </div>
