--- a/DiChoHo/templates/base.html
+++ b/DiChoHo/templates/base.html
@@ -59,7 +59,6 @@
 						</div>
 					</li>
 					<li class="nav-item {% block menu_about_class %}{% endblock %}"><a href="{% url 'about' %}" class="nav-link">Về chúng tôi</a></li>
-					<li class="nav-item {% block menu_contact_class %}{% endblock %}"><a href="{% url 'contact' %}" class="nav-link">Liên hệ</a></li>
 					<li class="nav-item cta cta-colored"><a href="{% url 'cart' %}" class="nav-link"><span
 								class="icon-shopping_cart"></span>[0]</a></li>
 					<li class="nav-item"><a href="{% url 'profile' %}" class="nav-link">Profile</a></li>
@@ -88,7 +87,7 @@
 				<div class="col-md">
 					<div class="ftco-footer-widget mb-4">
 						<h2 class="ftco-heading-2">Dichoho</h2>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
+						<p>Chuyên cung cấp các mặt hàng nông sản, thực phẩm tươi trong thời kỳ dịch bệnh covid</p>
 						<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
 							<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
 							<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -102,7 +101,6 @@
 						<ul class="list-unstyled">
 							<li><a href="#" class="py-2 d-block">Sản phẩm</a></li>
 							<li><a href="#" class="py-2 d-block">Về chúng tôi</a></li>
-							<!-- <li><a href="#" class="py-2 d-block">Journal</a></li> -->
 							<li><a href="#" class="py-2 d-block">Liên lạc</a></li>
 						</ul>
 					</div>
@@ -117,10 +115,6 @@
 								<li><a href="#" class="py-2 d-block">Quy tắc &amp; Điều kiện mua hàng</a></li>
 								<li><a href="#" class="py-2 d-block">Chính sách bảo mật</a></li>
 							</ul>
-							<ul class="list-unstyled">
-								<li><a href="#" class="py-2 d-block">FAQs</a></li>
-								<li><a href="#" class="py-2 d-block">Liên hệ</a></li>
-							</ul>
 						</div>
 					</div>
 				</div>
@@ -129,12 +123,10 @@
 						<h2 class="ftco-heading-2">Bạn có góp ý gì xin liên hệ tại</h2>
 						<div class="block-23 mb-3">
 							<ul>
-								<li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain
-										View, San Francisco, California, USA</span></li>
-								<li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929
-											210</span></a></li>
+								<li><span class="icon icon-map-marker"></span><span class="text">45 Đỗ Thúc Tịnh, Phường 12, Gò Vấp, Thành phố Hồ Chí Minh 700000, Việt Nam</span></li>
+								<li><a href="#"><span class="icon icon-phone"></span><span class="text">+84 123 456 789</span></a></li>
 								<li><a href="#"><span class="icon icon-envelope"></span><span
-											class="text">info@yourdomain.com</span></a></li>
+											class="text">cskh@dichoho.com</span></a></li>
 							</ul>
 						</div>
 					</div>
