--- a/DiChoHo/templates/product-single.html
+++ b/DiChoHo/templates/product-single.html
@@ -7,6 +7,10 @@
 {% block content %}
 {% load static %}
 
+<!-- sử dụng biến truyền vào từ view -->
+{% block product %}
+{% endblock %}
+
 <div class="hero-wrap hero-bread" style="background-image: url('/static/images/bg_1.jpg');">
 	<div class="container">
 		<div class="row no-gutters slider-text align-items-center justify-content-center">
