--- a/DiChoHo/templates/shop.html
+++ b/DiChoHo/templates/shop.html
@@ -74,7 +74,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6 col-lg-3 ftco-animate">
+			<div class="col-md-2 col-lg- ftco-animate">
 				<div class="product">
 					<a href="#" class="img-prod"><img class="img-fluid" src="{% static 'images/product-1.jpg' %}"
 							alt="Colorlib Template">
@@ -106,7 +106,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-6 col-lg-3 ftco-animate">
+			<div class="col-md-2 col-lg-2 ftco-animate">
 				<div class="product">
 					<a href="#" class="img-prod"><img class="img-fluid" src="{% static 'images/product-2.jpg' %}"
 							alt="Colorlib Template">
@@ -136,7 +136,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-6 col-lg-3 ftco-animate">
+			<div class="col-md-2 col-lg-2 ftco-animate">
 				<div class="product">
 					<a href="#" class="img-prod"><img class="img-fluid" src="{% static 'images/product-3.jpg' %}"
 							alt="Colorlib Template">
@@ -166,7 +166,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-6 col-lg-3 ftco-animate">
+			<div class="col-md-2 col-lg-2 ftco-animate">
 				<div class="product">
 					<a href="#" class="img-prod"><img class="img-fluid" src="{% static 'images/product-4.jpg' %}"
 							alt="Colorlib Template">
@@ -198,7 +198,7 @@
 			</div>
 
 
-			<div class="col-md-6 col-lg-3 ftco-animate">
+			<div class="col-md-2 col-lg-2 ftco-animate">
 				<div class="product">
 					<a href="#" class="img-prod"><img class="img-fluid" src="{% static 'images/product-5.jpg' %}"
 							alt="Colorlib Template">
@@ -230,7 +230,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-6 col-lg-3 ftco-animate">
+			<div class="col-md-2 col-lg-2 ftco-animate">
 				<div class="product">
 					<a href="#" class="img-prod"><img class="img-fluid" src="{% static 'images/product-6.jpg' %}"
 							alt="Colorlib Template">
@@ -260,7 +260,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-6 col-lg-3 ftco-animate">
+			<div class="col-md-2 col-lg-2 ftco-animate">
 				<div class="product">
 					<a href="#" class="img-prod"><img class="img-fluid" src="{% static 'images/product-7.jpg' %}"
 							alt="Colorlib Template">
@@ -290,7 +290,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-6 col-lg-3 ftco-animate">
+			<div class="col-md-2 col-lg-2 ftco-animate">
 				<div class="product">
 					<a href="#" class="img-prod"><img class="img-fluid" src="{% static 'images/product-8.jpg' %}"
 							alt="Colorlib Template">
@@ -321,7 +321,7 @@
 				</div>
 			</div>
 
-			<div class="col-md-6 col-lg-3 ftco-animate">
+			<div class="col-md-2 col-lg-2 ftco-animate">
 				<div class="product">
 					<a href="#" class="img-prod"><img class="img-fluid" src="{% static 'images/product-9.jpg' %}"
 							alt="Colorlib Template">
@@ -353,7 +353,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-6 col-lg-3 ftco-animate">
+			<div class="col-md-2 col-lg-2 ftco-animate">
 				<div class="product">
 					<a href="#" class="img-prod"><img class="img-fluid" src="{% static 'images/product-10.jpg' %}"
 							alt="Colorlib Template">
@@ -383,7 +383,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-6 col-lg-3 ftco-animate">
+			<div class="col-md-2 col-lg-2 ftco-animate">
 				<div class="product">
 					<a href="#" class="img-prod"><img class="img-fluid" src="{% static 'images/product-11.jpg' %}"
 							alt="Colorlib Template">
@@ -413,7 +413,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-6 col-lg-3 ftco-animate">
+			<div class="col-md-2 col-lg-2 ftco-animate">
 				<div class="product">
 					<a href="#" class="img-prod"><img class="img-fluid" src="{% static 'images/product-12.jpg' %}"
 							alt="Colorlib Template">
