--- a/DiChoHo/templates/profile.html
+++ b/DiChoHo/templates/profile.html
@@ -33,6 +33,9 @@
                 <a href="#billing" data-toggle="tab" class="nav-item nav-link has-icon nav-link-faded">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-credit-card mr-2"><rect x="1" y="4" width="22" height="16" rx="2" ry="2"></rect><line x1="1" y1="10" x2="23" y2="10"></line></svg>Billing
                 </a>
+                <a href="#information_order" data-toggle="tab" class="nav-item nav-link has-icon nav-link-faded">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shield mr-2"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path></svg>Information order
+                </a>
               </nav>
             </div>
           </div>
@@ -53,6 +56,9 @@
                 <li class="nav-item">
                   <a href="#billing" data-toggle="tab" class="nav-link has-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-credit-card"><rect x="1" y="4" width="22" height="16" rx="2" ry="2"></rect><line x1="1" y1="10" x2="23" y2="10"></line></svg></a>
                 </li>
+                <li class="nav-item">
+                  <a href="#information_order" data-toggle="tab" class="nav-link has-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shield"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path></svg></a>
+                </li>
               </ul>
             </div>
             <div class="card-body tab-content">
@@ -62,20 +68,20 @@
                 <form>
                   <div class="form-group">
                     <label for="fullName">Full Name</label>
-                    <input type="text" class="form-control" id="fullName" aria-describedby="fullNameHelp" placeholder="Enter your fullname" value="Kenneth Valdez">
+                    <input type="text" class="form-control" id="fullName" aria-describedby="fullNameHelp" placeholder="Enter your fullname" value="">
                     <small id="fullNameHelp" class="form-text text-muted">Your name may appear around here where you are mentioned. You can change or remove it at any time.</small>
                   </div>
                   <div class="form-group">
                     <label for="bio">Your Bio</label>
-                    <textarea class="form-control autosize" id="bio" placeholder="Write something about you" style="overflow: hidden; overflow-wrap: break-word; resize: none; height: 62px;">A front-end developer that focus more on user interface design, a web interface wizard, a connector of awesomeness.</textarea>
+                    <textarea class="form-control autosize" id="bio" placeholder="Write something about you" style="overflow: hidden; overflow-wrap: break-word; resize: none; height: 62px;"></textarea>
                   </div>
                   <div class="form-group">
                     <label for="url">URL</label>
-                    <input type="text" class="form-control" id="url" placeholder="Enter your website address" value="http://benije.ke/pozzivkij">
+                    <input type="text" class="form-control" id="url" placeholder="Enter your website address" value="">
                   </div>
                   <div class="form-group">
                     <label for="location">Location</label>
-                    <input type="text" class="form-control" id="location" placeholder="Enter your location" value="Bay Area, San Francisco, CA">
+                    <input type="text" class="form-control" id="location" placeholder="Enter your location" value="">
                   </div>
                   <div class="form-group small text-muted">
                     All of the fields on this page are optional and can be deleted at any time, and by filling them out, you're giving us consent to share this data wherever your user profile appears.
@@ -149,6 +155,42 @@
                   <div class="form-group mb-0">
                     <label class="d-block">Payment History</label>
                     <div class="border border-gray-500 bg-gray-200 p-3 text-center font-size-sm">You have not made any payment.</div>
+                  </div>
+                </form>
+              </div>
+              <div class="tab-pane" id="information_order">
+                <h6>Information Order</h6>
+                <hr>
+                <form>
+                  <div class="form-group">
+                    <label class="d-block">Change Password</label>
+                    <input type="text" class="form-control" placeholder="Enter your old password">
+                    <input type="text" class="form-control mt-1" placeholder="New password">
+                    <input type="text" class="form-control mt-1" placeholder="Confirm new password">
+                  </div>
+                </form>
+                <hr>
+                <form>
+                  <div class="form-group">
+                    <label class="d-block">Two Factor Authentication</label>
+                    <button class="btn btn-info" type="button">Enable two-factor authentication</button>
+                    <p class="small text-muted mt-2">Two-factor authentication adds an additional layer of security to your account by requiring more than just a password to log in.</p>
+                  </div>
+                </form>
+                <hr>
+                <form>
+                  <div class="form-group mb-0">
+                    <label class="d-block">Sessions</label>
+                    <p class="font-size-sm text-secondary">This is a list of devices that have logged into your account. Revoke any sessions that you do not recognize.</p>
+                    <ul class="list-group list-group-sm">
+                      <li class="list-group-item has-icon">
+                        <div>
+                          <h6 class="mb-0">San Francisco City 190.24.335.55</h6>
+                          <small class="text-muted">Your current session seen in United States</small>
+                        </div>
+                        <button class="btn btn-light btn-sm ml-auto" type="button">More info</button>
+                      </li>
+                    </ul>
                   </div>
                 </form>
               </div>
