Fix many function

--- a/DiChoHo/templates/static/css/style.css
+++ b/DiChoHo/templates/static/css/style.css
@@ -8019,10 +8019,10 @@ a {
   -webkit-transition: .3s all ease;
   -o-transition: .3s all ease;
   transition: .3s all ease;
-  color: #82ae46; }
+  color: #02be6e; }
   a:hover, a:focus {
     text-decoration: none;
-    color: #82ae46; }
+    color: #02be6e; }
 
 h1, h2, h3, h4, h5,
 .h1, .h2, .h3, .h4, .h5 {
@@ -8032,7 +8032,7 @@ h1, h2, h3, h4, h5,
   font-family: "Poppins", Arial, sans-serif; }
 
 .text-primary {
-  color: #82ae46 !important; }
+  color: #02be6e !important; }
 
 .topper {
   font-size: 11px;
@@ -8137,7 +8137,7 @@ h1, h2, h3, h4, h5,
     @media (max-width: 991.98px) {
       .ftco-navbar-light .navbar-nav > .nav-item.cta > a {
         color: #fff;
-        background: #82ae46; } }
+        background: #02be6e; } }
   .ftco-navbar-light .navbar-nav > .nav-item.active > a {
     color: #334443; }
     @media (max-width: 991.98px) {
@@ -8172,7 +8172,7 @@ h1, h2, h3, h4, h5,
         display: inline-block;
         color: #fff !important; }
     .ftco-navbar-light.scrolled .nav-item.cta.cta-colored span {
-      border-color: #82ae46; }
+      border-color: #02be6e; }
     @media (max-width: 991.98px) {
       .ftco-navbar-light.scrolled .navbar-nav {
         background: none;
@@ -8198,7 +8198,7 @@ h1, h2, h3, h4, h5,
       padding-bottom: 0.9rem !important;
       color: #334443 !important; }
       .ftco-navbar-light.scrolled .nav-link.active {
-        color: #82ae46 !important; }
+        color: #02be6e !important; }
     .ftco-navbar-light.scrolled.awake {
       margin-top: 0px;
       -webkit-transition: .3s all ease-out;
@@ -8228,7 +8228,7 @@ h1, h2, h3, h4, h5,
     content: '';
     opacity: .6;
     width: 50%;
-    background: #82ae46; }
+    background: #02be6e; }
   .hero-wrap .slider-text {
     color: #fff;
     position: relative; }
@@ -8277,7 +8277,7 @@ h1, h2, h3, h4, h5,
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   border-radius: 50%;
-  background: #82ae46;
+  background: #02be6e;
   cursor: pointer;
   position: relative;
   text-align: center;
@@ -8453,7 +8453,7 @@ h1, h2, h3, h4, h5,
           .owl-carousel.home-slider .owl-nav .owl-prev:hover span:before, .owl-carousel.home-slider .owl-nav .owl-prev:focus span:before {
             font-size: 20px;
             margin-top: 7px;
-            color: #82ae46; }
+            color: #02be6e; }
       .owl-carousel.home-slider .owl-nav .owl-next {
         top: 0 !important;
         right: 0 !important; }
@@ -8466,7 +8466,7 @@ h1, h2, h3, h4, h5,
           .owl-carousel.home-slider .owl-nav .owl-next:hover span:before, .owl-carousel.home-slider .owl-nav .owl-next:focus span:before {
             font-size: 24px;
             margin-top: 7px;
-            color: #82ae46; }
+            color: #02be6e; }
     .owl-carousel.home-slider .owl-dots {
       position: absolute;
       left: 0;
@@ -8493,7 +8493,7 @@ h1, h2, h3, h4, h5,
   background: #f7f6f2 !important; }
 
 .bg-primary {
-  background: #82ae46; }
+  background: #02be6e; }
 
 .bg-secondary {
   background: #ffe6eb !important; }
@@ -8522,28 +8522,28 @@ h1, h2, h3, h4, h5,
   .btn:hover, .btn:active, .btn:focus {
     outline: none; }
   .btn.btn-primary {
-    background: #82ae46;
-    border: 1px solid #82ae46;
+    background: #02be6e;
+    border: 1px solid #02be6e;
     color: #fff; }
     .btn.btn-primary:hover {
-      border: 1px solid #82ae46;
+      border: 1px solid #02be6e;
       background: transparent;
-      color: #82ae46; }
+      color: #02be6e; }
     .btn.btn-primary.btn-outline-primary {
-      border: 1px solid #82ae46;
+      border: 1px solid #02be6e;
       background: transparent;
-      color: #82ae46; }
+      color: #02be6e; }
       .btn.btn-primary.btn-outline-primary:hover {
         border: 1px solid transparent;
-        background: #82ae46;
+        background: #02be6e;
         color: #fff; }
   .btn.btn-white {
     background: #fff;
     border: 1px solid #fff;
     color: #334443; }
     .btn.btn-white:hover {
-      background: #82ae46;
-      border: 1px solid #82ae46;
+      background: #02be6e;
+      border: 1px solid #02be6e;
       color: #fff; }
     .btn.btn-white.btn-outline-white {
       border: 1px solid #fff;
@@ -8551,15 +8551,15 @@ h1, h2, h3, h4, h5,
       color: #fff; }
       .btn.btn-white.btn-outline-white:hover {
         border: 1px solid transparent;
-        background: #82ae46;
+        background: #02be6e;
         color: #fff; }
   .btn.btn-black {
     background: #334443;
     border: 1px solid #334443;
     color: #fff; }
     .btn.btn-black:hover {
-      background: #82ae46;
-      border: 1px solid #82ae46;
+      background: #02be6e;
+      border: 1px solid #02be6e;
       color: #fff; }
     .btn.btn-black.btn-outline-white {
       border: 1px solid #334443;
@@ -8579,7 +8579,7 @@ h1, h2, h3, h4, h5,
   .img-2 .icon {
     width: 100px;
     height: 100px;
-    background: #82ae46;
+    background: #02be6e;
     -webkit-animation: pulse 2s infinite;
     animation: pulse 2s infinite;
     -webkit-border-radius: 50%;
@@ -8608,7 +8608,7 @@ h1, h2, h3, h4, h5,
   font-family: "Lora", Georgia, serif;
   font-style: italic; }
   .deal-of-the-day h3 a {
-    color: #82ae46; }
+    color: #02be6e; }
 
 .deal-of-the-day .price {
   font-weight: 500;
@@ -8625,7 +8625,7 @@ h1, h2, h3, h4, h5,
     font-size: 40px;
     font-weight: 500;
     border-left: 1px solid rgba(0, 0, 0, 0.05);
-    color: #82ae46; }
+    color: #02be6e; }
     @media (max-width: 991.98px) {
       #timer .time {
         font-size: 30px; } }
@@ -8642,14 +8642,14 @@ h1, h2, h3, h4, h5,
   font-weight: 400;
   font-size: 16px; }
   .product-category li a {
-    color: #82ae46;
+    color: #02be6e;
     padding: 5px 20px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
     border-radius: 5px; }
     .product-category li a.active {
-      background: #82ae46;
+      background: #02be6e;
       color: #fff; }
 
 .ftco-product .owl-carousel .owl-stage-outer {
@@ -8682,7 +8682,7 @@ h1, h2, h3, h4, h5,
       bottom: 0;
       content: '';
       opacity: 0;
-      background: #82ae46;
+      background: #02be6e;
       -moz-transition: all 0.3s ease;
       -o-transition: all 0.3s ease;
       -webkit-transition: all 0.3s ease;
@@ -8695,7 +8695,7 @@ h1, h2, h3, h4, h5,
       padding: 2px 10px;
       color: #fff;
       font-weight: 300;
-      background: #82ae46;
+      background: #02be6e;
       font-size: 12px; }
     .product .img-prod img {
       -webkit-transform: scale(1);
@@ -8752,13 +8752,13 @@ h1, h2, h3, h4, h5,
         color: #334443; }
     .product .text p.price {
       margin-bottom: 0;
-      color: #82ae46;
+      color: #02be6e;
       font-weight: 400; }
       .product .text p.price span.price-dc {
         text-decoration: line-through;
         color: #b3b3b3; }
       .product .text p.price span.price-sale {
-        color: #82ae46; }
+        color: #02be6e; }
     .product .text .pricing {
       width: 100%;
       -moz-transition: all 0.3s ease;
@@ -8780,7 +8780,8 @@ h1, h2, h3, h4, h5,
       .product .text .bottom-area a {
         color: #fff;
         width: 100%;
-        background: #82ae46;
+        /* background: #02be6e; */
+        background: #02be6e;
         width: 40px;
         height: 40px;
         margin: 0 auto;
@@ -8822,7 +8823,7 @@ h1, h2, h3, h4, h5,
   height: 40px !important;
   text-align: center;
   border: 1px solid rgba(0, 0, 0, 0.1) !important;
-  color: #82ae46;
+  color: #02be6e;
   padding: 10px 20px;
   background: transparent !important;
   -webkit-border-radius: 0;
@@ -8877,7 +8878,7 @@ h1, h2, h3, h4, h5,
       letter-spacing: 2px; }
 
 .ftco-cart button i {
-  color: #82ae46; }
+  color: #02be6e; }
 
 .ftco-cart .quantity-left-minus {
   background: transparent;
@@ -8907,9 +8908,9 @@ h1, h2, h3, h4, h5,
     -webkit-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
-    color: #82ae46; }
+    color: #02be6e; }
     .ftco-cart .form-group .icon span {
-      color: #82ae46; }
+      color: #02be6e; }
     @media (max-width: 767.98px) {
       .ftco-cart .form-group .icon {
         right: 10px; } }
@@ -8935,7 +8936,7 @@ h1, h2, h3, h4, h5,
   .table th {
     font-weight: 500; }
   .table .thead-primary {
-    background: #82ae46; }
+    background: #02be6e; }
     .table .thead-primary tr th {
       padding: 20px 10px;
       color: #fff !important;
@@ -8951,8 +8952,8 @@ h1, h2, h3, h4, h5,
       padding: 4px 10px;
       color: #334443; }
       .table tbody tr td.product-remove a:hover {
-        border: 1px solid #82ae46;
-        background: #82ae46; }
+        border: 1px solid #02be6e;
+        background: #02be6e; }
         .table tbody tr td.product-remove a:hover span {
           color: #fff; }
     .table tbody tr td.quantity {
@@ -9048,7 +9049,7 @@ h1, h2, h3, h4, h5,
     /* Firefox 18- */
     color: rgba(0, 0, 0, 0.4); }
   .billing-form .form-control:focus, .billing-form .form-control:active {
-    border-color: #82ae46 !important; }
+    border-color: #02be6e !important; }
 
 .billing-form textarea.form-control {
   height: inherit !important; }
@@ -9124,14 +9125,14 @@ h1, h2, h3, h4, h5,
         /* Firefox 18- */
         color: black !important; }
     .subscribe-form .form-group .submit {
-      border-left: 1px solid #82ae46;
+      border-left: 1px solid #02be6e;
       color: #fff !important;
       -webkit-border-radius: 0;
       -moz-border-radius: 0;
       -ms-border-radius: 0;
       border-radius: 0;
       font-size: 12px;
-      background: #82ae46 !important; }
+      background: #02be6e !important; }
       .subscribe-form .form-group .submit:hover {
         cursor: pointer; }
   .subscribe-form .icon {
@@ -9179,7 +9180,7 @@ textarea.form-control {
   visibility: hidden; }
 
 .bg-primary {
-  background: #82ae46 !important; }
+  background: #02be6e !important; }
 
 .bg-black {
   background: #334443 !important; }
@@ -9286,7 +9287,7 @@ textarea.form-control {
     margin-bottom: 10px;
     font-family: "Lora", Georgia, serif;
     font-style: italic;
-    color: #82ae46; }
+    color: #02be6e; }
   .heading-section h2 {
     position: relative;
     font-size: 40px;
@@ -9371,7 +9372,7 @@ textarea.form-control {
       font-size: 12px;
       font-weight: 500; }
   .ftco-services .services:hover .icon, .ftco-services .services:focus .icon {
-    background: #82ae46; }
+    background: #02be6e; }
     .ftco-services .services:hover .icon span, .ftco-services .services:focus .icon span {
       color: #fff; }
 
@@ -9380,7 +9381,7 @@ textarea.form-control {
   width: 100%;
   height: 250px; }
   .ftco-category .category-wrap .text {
-    background: #82ae46; }
+    background: #02be6e; }
     .ftco-category .category-wrap .text h2 {
       font-size: 18px;
       font-family: "Poppins", Arial, sans-serif; }
@@ -9392,7 +9393,7 @@ textarea.form-control {
   .ftco-category .category-wrap-2 .text {
     width: 100%; }
     .ftco-category .category-wrap-2 .text h2 {
-      color: #82ae46;
+      color: #02be6e;
       font-family: "Lora", Georgia, serif;
       font-style: italic;
       font-size: 24px; }
@@ -9459,7 +9460,7 @@ textarea.form-control {
       border-radius: 50%;
       background: rgba(0, 0, 0, 0.2); }
       .testimony-section .owl-dots .owl-dot.active {
-        background: #82ae46; }
+        background: #02be6e; }
 
 .testimony-wrap {
   display: block;
@@ -9485,7 +9486,7 @@ textarea.form-control {
       -ms-border-radius: 50%;
       border-radius: 50%; }
       .testimony-wrap .user-img .quote i {
-        color: #82ae46; }
+        color: #02be6e; }
   .testimony-wrap .name {
     font-weight: 400;
     font-size: 18px;
@@ -9509,7 +9510,7 @@ textarea.form-control {
       content: '';
       width: 3px;
       height: 30px;
-      background: #82ae46; }
+      background: #02be6e; }
 
 .image-popup {
   cursor: -webkit-zoom-in;
@@ -9568,7 +9569,7 @@ textarea.form-control {
     display: block;
     font-size: 72px;
     font-weight: bold;
-    color: #82ae46; }
+    color: #02be6e; }
   .ftco-counter .ftco-label {
     font-size: 12px;
     text-transform: uppercase;
@@ -9609,7 +9610,7 @@ textarea.form-control {
     .blog-entry .text .heading a {
       color: #334443; }
       .blog-entry .text .heading a:hover, .blog-entry .text .heading a:focus, .blog-entry .text .heading a:active {
-        color: #82ae46; }
+        color: #02be6e; }
   .blog-entry .text .meta-chat {
     color: #b3b3b3; }
   .blog-entry .text .read {
@@ -9709,8 +9710,8 @@ textarea.form-control {
         appearance: none; }
   .block-17 form .search-submit {
     width: 160px;
-    background: #82ae46;
-    border: 1px solid #82ae46;
+    background: #02be6e;
+    border: 1px solid #02be6e;
     color: #fff;
     padding: 12px 10px;
     -webkit-border-radius: 0;
@@ -9721,9 +9722,9 @@ textarea.form-control {
       .block-17 form .search-submit {
         width: 80px; } }
     .block-17 form .search-submit:hover {
-      background: #82ae46 !important;
+      background: #02be6e !important;
       color: #fff !important;
-      border: 1px solid #82ae46 !important; }
+      border: 1px solid #02be6e !important; }
 
 .block-27 ul {
   padding: 0;
@@ -9743,7 +9744,7 @@ textarea.form-control {
       border: 1px solid #e6e6e6;
       background: #fff; }
     .block-27 ul li.active a, .block-27 ul li.active span {
-      background: #82ae46;
+      background: #02be6e;
       color: #fff;
       border: 1px solid transparent; }
 
@@ -9775,7 +9776,7 @@ textarea.form-control {
     .block-21 .text .heading-1 a {
       color: #334443; }
       .block-21 .text .heading-1 a:hover, .block-21 .text .heading-1 a:active, .block-21 .text .heading-1 a:focus {
-        color: #82ae46; }
+        color: #02be6e; }
   .block-21 .text .meta > div {
     display: inline-block;
     font-size: 12px;
@@ -9863,7 +9864,7 @@ textarea.form-control {
       /* Firefox 18- */
       color: black; }
     .search-form .form-group input:focus, .search-form .form-group input:active {
-      border-color: #82ae46 !important; }
+      border-color: #02be6e !important; }
 
 .search-form .icon {
   position: absolute;
