--- a/DiChoHo/templates/product-single.html
+++ b/DiChoHo/templates/product-single.html
@@ -18,9 +18,7 @@
 	<div class="container">
 		<div class="row no-gutters slider-text align-items-center justify-content-center">
 			<div class="col-md-9 ftco-animate text-center">
-				<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span class="mr-2"><a
-							href="index.html">Product</a></span> <span>Product Single</span></p>
-				<h1 class="mb-0 bread">Product Single</h1>
+				<h1 class="mb-0 bread">Thông Tin Sản Phẩm</h1>
 			</div>
 		</div>
 	</div>
@@ -31,10 +29,10 @@
 		<div class="row">
 			<div class="col-lg-6 mb-5 ftco-animate">
 				<a href="{% static 'images/product-1.jpg' %}" class="image-popup"><img
-						src="{% static 'images/product-1.jpg' %}" class="img-fluid" alt="Colorlib Template"></a>
+						src="{{ product.image.url | slice:"10:" }}" class="img-fluid" alt="Colorlib Template"></a>
 			</div>
 			<div class="col-lg-6 product-details pl-md-5 ftco-animate">
-				<h3>Bell Pepper</h3>
+				<h3>{{product.title}}</h3>
 				<div class="rating d-flex">
 					<p class="text-left mr-4">
 						<a href="#" class="mr-2">5.0</a>
@@ -51,26 +49,10 @@
 						<a href="#" class="mr-2" style="color: #000;">500 <span style="color: #bbb;">Sold</span></a>
 					</p>
 				</div>
-				<p class="price"><span>$120.00</span></p>
-				<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a
-					paradisematic country, in which roasted parts of sentences fly into your mouth. Text should turn
-					around and return to its own, safe country. But nothing the copy said could convince her and so it
-					didn’t take long until.
+				<p class="price"><span></span></p>
+				<p>{{product.description}}
 				</p>
 				<div class="row mt-4">
-					<div class="col-md-6">
-						<div class="form-group d-flex">
-							<div class="select-wrap">
-								<div class="icon"><span class="ion-ios-arrow-down"></span></div>
-								<select name="" id="" class="form-control">
-									<option value="">Small</option>
-									<option value="">Medium</option>
-									<option value="">Large</option>
-									<option value="">Extra Large</option>
-								</select>
-							</div>
-						</div>
-					</div>
 					<div class="w-100"></div>
 					<div class="input-group col-md-6 d-flex mb-3">
 						<span class="input-group-btn mr-2">
@@ -87,11 +69,8 @@
 						</span>
 					</div>
 					<div class="w-100"></div>
-					<div class="col-md-12">
-						<p style="color: #000;">600 kg available</p>
-					</div>
 				</div>
-				<p><a href="cart.html" class="btn btn-black py-3 px-5">Add to Cart</a></p>
+				<p><a href="cart.html" class="btn btn-black py-3 px-5">Thêm vào giỏ</a></p>
 			</div>
 		</div>
 	</div>
@@ -101,27 +80,24 @@
 	<div class="container">
 		<div class="row justify-content-center mb-3 pb-3">
 			<div class="col-md-12 heading-section text-center ftco-animate">
-				<span class="subheading">Products</span>
-				<h2 class="mb-4">Related Products</h2>
-				<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+				<h2 class="mb-4">Các sản phẩm tương tự</h2>
 			</div>
 		</div>
 	</div>
 	<div class="container">
 		<div class="row">
+			{% for relative_product in relative_products %}
 			<div class="col-md-6 col-lg-3 ftco-animate">
 				<div class="product">
-					<a href="#" class="img-prod"><img class="img-fluid" src="{% static 'images/product-1.jpg' %}"
-							alt="Colorlib Template">
-						<span class="status">30%</span>
-						<div class="overlay"></div>
+					<a href="#" class="img-prod"><img class="img-fluid" src="{{ relative_product.image.url | slice:"10:" }}"
+							alt="anh-san-pham">
 					</a>
 					<div class="text py-3 pb-4 px-3 text-center">
-						<h3><a href="#">Bell Pepper</a></h3>
+						<h3><a href="#">{{ relative_product.title }}</a></h3>
 						<div class="d-flex">
 							<div class="pricing">
-								<p class="price"><span class="mr-2 price-dc">$120.00</span><span
-										class="price-sale">$80.00</span></p>
+								<p class="price"><span
+										class="price-sale">{{ relative_product.price }}</span></p>
 							</div>
 						</div>
 						<div class="bottom-area d-flex px-3">
@@ -141,7 +117,8 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-6 col-lg-3 ftco-animate">
+			{% endfor %}
+			<!-- <div class="col-md-6 col-lg-3 ftco-animate">
 				<div class="product">
 					<a href="#" class="img-prod"><img class="img-fluid" src="{% static 'images/product-2.jpg' %}"
 							alt="Colorlib Template">
@@ -231,7 +208,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div>  -->
 	</div>
 </section>
 
