--- a/DiChoHo/templates/shop.html
+++ b/DiChoHo/templates/shop.html
@@ -103,9 +103,9 @@
     <div class="row">
       {% for item in items %}
 
-      <div class="col-md-2 col-lg- ftco-animate">
-        <div class="product">
-          <a href="#" class="img-prod"
+      <div class="col-md-2 col-lg-2 ftco-animate">
+        <div class="product" >
+          <a href="#" class="img-prod" 
             ><img
               class="img-fluid"
               src="{{ item.image.url | slice:"10:" }}"
@@ -113,8 +113,8 @@
             />
             <div class="overlay"></div>
           </a>
-          <div class="text py-3 pb-4 px-3 text-center">
-            <h3><a href="#">{{ item.title }}</a></h3>
+          <div class="text py-3 pb-4 px-3 text-center" style="text-overflow: ellipsis;max-width: 100%;overflow: hidden;height: 135px;">
+            <h3><a href="#" >{{ item.title }}</a></h3>
             <div class="d-flex">
               <div class="pricing">
                 <p class="price">
